--- a/OurGames.UI/OurGames.UI.csproj
+++ b/OurGames.UI/OurGames.UI.csproj
@@ -13,9 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Models\" />
-    <Folder Include="wwwroot\js\" />
-    <Folder Include="wwwroot\css\" />
+    <Folder Include="Services\" />
     <Folder Include="wwwroot\images\" />
     <Folder Include="wwwroot\lib\" />
   </ItemGroup>
