Pre-configurado, autenticação com Google, com Facebook e email/senha

--- a/OurGames.Repository/OurGames.Repository.csproj
+++ b/OurGames.Repository/OurGames.Repository.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\OurGames.Common\OurGames.Common.csproj" />
     <ProjectReference Include="..\OurGames.Core\OurGames.Core.csproj" />
   </ItemGroup>
 
